syntax="proto3";

package genproto;
option go_package="genproto/account_service";

message CreateAccountRequest {
  string account_number = 1;
  string user_id = 2;
}

message CreateAccountResponse {
  string account_id = 1;
  string account_number = 2;
}

message PayForAccountRequest {
  string account_number = 1;
  double balance = 2;
}

message WithdrawFromAccountRequest {
  string account_number = 1;
  double balance = 2;
}

message GetAccountsRequest {
  string username = 1;
}

message GetAccounts {
  string account_number = 1;
  double balance = 2;
  string created_at = 3;
}

message GetAccountsResponse {
  repeated GetAccounts accounts = 1;
}

message CheckAccountBalanceRequest {
  string account_number = 1;
  double balance = 2;
}

message CheckAccountBalanceResponse {
  bool exist = 1;
}

message TransferBalanceRequest {
  string sender = 1;
  string recipient = 2;
  double balance = 3;
}

message TransferBalanceResponse {
  string transaction_id = 1;
}

message CheckAccountExistRequest {
  string account_number = 1;
}

message CheckAccountExistResponse {
  bool exist = 1;
}