syntax="proto3";

package genproto;
option go_package="genproto/account_service";

import "google/protobuf/empty.proto";
import "account.proto";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc PayForAccount(PayForAccountRequest) returns (google.protobuf.Empty) {}
  rpc WithdrawFromAccount(WithdrawFromAccountRequest) returns (google.protobuf.Empty) {}
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {}
  rpc CheckAccountBalance(CheckAccountBalanceRequest) returns (CheckAccountBalanceResponse) {}
  rpc TransferBalance(TransferBalanceRequest) returns (TransferBalanceResponse) {}
  rpc CheckAccountExist(CheckAccountExistRequest) returns (CheckAccountExistResponse) {}
}